--- a/psel-shinier-2021/package.json
+++ b/psel-shinier-2021/package.json
@@ -13,12 +13,16 @@
     "@fortawesome/vue-fontawesome": "^2.0.2",
     "buefy": "^0.9.6",
     "core-js": "^3.6.5",
+    "install": "^0.13.0",
+    "npm": "^7.9.0",
     "vue": "^2.6.12",
-    "vue-cli": "^2.9.6"
+    "vue-cli": "^2.9.6",
+    "vue-router": "^3.5.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "^4.5.12",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
